--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 .input-group {
   width: 400px;
 }
+html, body {
+    margin: 0;
+    padding: 0;
+}
+canvas {
+  margin: 0;
+  padding:0;
+  position: absolute;
+  top: 80px;
+}
